--- a/src/style/_others.scss
+++ b/src/style/_others.scss
@@ -5,6 +5,29 @@ $white: #fff;
 
 $general-font: 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif;
 
+.sidework-logo {
+  .first-char {
+    color: #ff007b;
+    font-size: 32px;
+    font-weight: 500;
+  }
+  .color {
+    color: #ff007b;
+  }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+.no-hover {
+    text-decoration: none !important;
+}
+
+
 .cursor-pointer {
 	cursor: pointer;
 }
