--- a/src/style/sidebar.scss
+++ b/src/style/sidebar.scss
@@ -1,4 +1,4 @@
-@import "./sidebar/structure";
-@import "./sidebar/animations";
-@import "./sidebar/scroll";
-@import "./sidebar/dark-theme";
+@import "./sidebar/_structure";
+@import "./sidebar/_animations";
+@import "./sidebar/_scroll";
+@import "./sidebar/_dark-theme";
