--- a/src/style/_inputs.scss
+++ b/src/style/_inputs.scss
@@ -1,9 +1,13 @@
 .delay-input {
+    position: relative;
+	input {
+		padding-right: 27px;
+	}
 	.loading-spinner {
-		position   : absolute;
-		right      : 20px;
-		top        : 5px;
-		transition : all .2s ease-in-out;
+		position: absolute;
+		right: 4px;
+		top: 5px;
+		transition: all .2s ease-in-out
 	}
 }
 
