--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -4,3 +4,12 @@
 @import '_others';
 @import '_header-company';
 @import '_fix_bootstrap_placeholder_color';
+
+.collapsible-content-edonec {
+    transition: height 0.2s ease-in-out;
+}
+
+.collapsible-card-edonec {
+    transition: 0.3s;
+}
+
