--- a/src/UI/style/_inputs.scss
+++ b/src/UI/style/_inputs.scss
@@ -1,12 +1,21 @@
 .delay-input {
-    position: relative;
+	position: relative;
+
 	input {
 		padding-right: 27px;
 	}
+
 	.loading-spinner {
 		position: absolute;
 		right: 4px;
 		top: 5px;
+		transition: all .2s ease-in-out
+	}
+
+	.clear-value {
+		position: absolute;
+		right: 6px;
+		top: 13px;
 		transition: all .2s ease-in-out
 	}
 }
